# node-replication

./: .gitignore  .gitlab-ci.yml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  commitable.sh  rust-toolchain
.github/: dependabot.yml
.github/workflows/: bench_deploy.yml  clippy.yml  cnr.yml  nr.yml  rust.yml
bench_utils/: Cargo.toml  README.md
bench_utils/src/: benchmark.rs  cnr_mkbench.rs  lib.rs  mkbench.rs  topology.rs
benches/: Cargo.toml  README.md  chashbench.rs  criterion.rs  criterion_bench.rs  hashbench.rs  hashbench_plot.r  hashbench_run.sh  hashmap.rs  hashmap_comparisons.rs  lockfree.rs  lockfree_comparisons.rs  lockfree_partitioned.rs  log.rs  memfs.rs  mkbench.rs  nop.rs  nrbench.rs  nrbench.yml  nrfs.rs  osbench.rs  rwlockbench.rs  rwlockbench_run.sh  stack.rs  synthetic.rs  utils.rs  vspace.rs
benches/os_workload/: kcb.rs  mod.rs  process.rs  vspace.rs
benches/os_workload/kpi/: mod.rs  x86_64.rs
benches/os_workload/memory/: buddy.rs  mod.rs
benches/utils/: benchmark.rs  mod.rs  topology.rs
cnr/: Cargo.toml  README.md
cnr/examples/: hashmap.rs  stack.rs
cnr/src/: context.rs  lib.rs  log.rs  replica.rs
cnr/tests/: hashmap.rs  stack.rs  verify.rs
examples/: hashmap.rs  stack.rs
examples/stack/: args.yml  main.rs  pinning.rs  plot.rs
node-replication/: Cargo.toml
node-replication-cnr/: Cargo.toml
node-replication-cnr/examples/: hashmap.rs  stack.rs
node-replication-cnr/src/: log.rs  replica.rs
node-replication-cnr/tests/: stack.rs
node-replication-nr/: Cargo.toml
node-replication-nr/src/: lib.rs  log.rs
node-replication/benches/: README.md  chashbench.rs  simdr.rs  synthetic.rs  vspace.rs
node-replication/benches/hashbench/: main.rs
node-replication/benches/hashmap/: main.rs
node-replication/benches/lockfree/: main.rs
node-replication/benches/rwlockbench/: main.rs  rwlockbench_run.sh
node-replication/examples/: cnr_btreeset.rs  nr_async_hashmap.rs  nr_btreeset.rs  nr_dynamic_replica.rs  nr_hashmap.rs  nr_stack.rs  simdr.rs
node-replication/src/: context.rs  lib.rs  log.rs  replica.rs
node-replication/src/cnr/: context.rs  log.rs  mod.rs  replica.rs
node-replication/src/nr/: context.rs  log.rs  mod.rs  replica.rs  rwlock.rs
node-replication/tests/: nr_stack.rs
node_replication/benches/: log.rs  vspace.rs
node_replication/benches/lockfree/: main.rs
node_replication/examples/: nr_btreeset.rs  nr_hashmap.rs
node_replication/src/cnr/: log.rs  mod.rs
node_replication/src/nr/: mod.rs  reusable_box.rs  rwlock.rs
node_replication/tests/: nr_read_linearizes.rs
nr/: Cargo.toml  README.md
nr-dispatch-derive/: Cargo.toml
nr-dispatch-derive/src/: lib.rs
nr/examples/: async_hashmap.rs  btreeset.rs  hashmap.rs  hashmap2.rs  hashmap_derived.rs  stack.rs
nr/src/: context.rs  lib.rs  log.rs  loom_rwlock.rs  replica.rs  reusable_box.rs  rwlock.rs
nr/tests/: read_linearizes.rs  read_linearizes_no_loom.rs  stack.rs
nr_unified/: Cargo.toml  README.md
nr_unified/benches/: nrfs.rs  stack.rs
nr_unified/benches/hashbench/: hashbench_run.sh
nr_unified/benches/hashmap/: hashmap_comparisons.rs  main.rs
nr_unified/benches/lockfree/: comparisons.rs
nr_unified/examples/: cnr_hashmap.rs  cnr_stack.rs  nr_async_hashmap.rs  nr_stack.rs
nr_unified/src/: context.rs  lib.rs  log.rs  replica.rs
nr_unified/src/cnr/: context.rs  log.rs  mod.rs  replica.rs
nr_unified/src/nr/: context.rs  log.rs  mod.rs  replica.rs  rwlock.rs
nr_unified/tests/: cnr_hashmap.rs  cnr_verify.rs
nrbenches/: Cargo.toml  README.md  chashbench.rs  cnr_mkbench.rs  hashbench.rs  hashbench_run.sh  hashmap.rs  hashmap_comparisons.rs  lockfree.rs  lockfree_comparisons.rs  lockfree_partitioned.rs  log.rs  memfs.rs  mkbench.rs  nrfs.rs  rwlockbench_plot.r  stack.rs  synthetic.rs  vspace.rs
nrbenches/utils/: benchmark.rs  mod.rs  topology.rs
scripts/: ci.bash  scale_bench_plot.py
src/: combiner.rs  context.rs  lib.rs  log.rs  replica.rs  rwlock.rs
tests/: stack.rs
verification/ivy/: nr_log.ivy  nr_log_atomic.ivy  nr_log_demo.ivy
