[package]
name = "node-replication"
version = "0.0.3"
authors = ["Chinmay Kulkarni <chinmayk@vmware.com>", "Gerd Zellweger <mail@gerdzellweger.com>", "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An operation-log based approach for data replication."
keywords = ["numa", "log", "x86", "black-box", "replication"]
categories = ["algorithms", "concurrency", "data-structures", "no-std", "os"]
autobenches = false

[[bench]]
name = "hashbench"
harness = false

[[bench]]
name = "nrbench"
harness = false

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "vspace"
harness = false

[[bench]]
name = "memfs"
harness = false

[dependencies]
crossbeam-utils = { version = "0.6", default-features = false }
arr_macro = "0.1.2"
log = "0.4"

# Add debug symbols on the release build so that we can debug performance issues
[profile.release]
debug = true
#lto = true
#codegen-units = 1

[profile.bench]
debug = true

[dev-dependencies]
criterion = { git = "https://github.com/gz/criterion.rs", branch = "tput" }
clap = { version = "2", features = ["yaml"] }
rand = "0.7"
nix = "0.14.1"
log = "0.4"
hwloc = "0.5.0"
env_logger = "0.6"
num_cpus = "1.10"
x86 = "0.19"
custom_error = "1.6.0"
slabmalloc = "0.3.1"
core_affinity = { git = "https://github.com/nau/core_affinity_rs", branch = "patch-1" }
btfs = "0.0.4"
zipf = "6.0.1"
evmap = "7.1"
chashmap = "2.2"
parking_lot = "0.7.1"
urcu-sys = { version = "0.0.3" }
