[package]
name = "bench_utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
  "Chinmay Kulkarni <chinmayk@cs.utah.edu>",
  "Gerd Zellweger <mail@gerdzellweger.com>",
  "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>",
  "Irina Calciu <icalciu@vmware.com>",
]

[profile.bench]
debug = true

[dependencies]
node-replication = { path = "../node-replication" }
arr_macro = "0.1.2"
chashmap = "2.2"
clap = { version = "2", features = ["yaml"] }
core_affinity = "0.5.10"
crossbeam = { git = "https://github.com/crossbeam-rs/crossbeam" }
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
crossbeam-utils = { version = "0.8", default-features = false }
csv = "1.1.3"
dashmap = "4.0.2"
env_logger = "0.9"
evmap = "8"
flurry = "0.3.0"
hwloc2 = "2.2"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.12"
parking_lot = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
rand_xorshift = "0.3.0"
serde = { version = "1", features = ["derive"] }
static_assertions = "1.1.0"
urcu-sys = "=0.0.5"
zipf = "7.0"
nix = { version = "0.24", features = ["sched"] }
nrfs = {git = "https://github.com/ankit-iitb/nrfs.git", branch = "master"}
tokio = { version = "1.11.0", features = ["full"] }
async-trait = "0.1.51"

[features]
cmp = []
smokebench = []
c_nr = []
nr = []
# Very exhaustive parameter sweep (may take a day to run on a big machine)
exhaustive = []
