[package]
name = "nr-bench"
version = "0.1.0"
authors = ["Chinmay Kulkarni <chinmayk@cs.utah.edu>", "Gerd Zellweger <mail@gerdzellweger.com>", "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>", "Irina Calciu <icalciu@vmware.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bench]]
name = "lockfree"
harness = false
path = "lockfree.rs"
required-features = ["c_nr"]

[[bench]]
name = "nrfs"
harness = false
path = "nrfs.rs"
required-features = ["c_nr"]

[[bench]]
name = "chashbench"
harness = false
path = "chashbench.rs"
required-features = ["c_nr"]

[[bench]]
name = "hashbench"
harness = false
path = "hashbench.rs"
required-features = ["nr"]

[[bench]]
name = "rwlockbench"
harness = false
path = "rwlockbench.rs"
required-features = ["nr"]

[[bench]]
name = "log"
harness = false
path = "log.rs"
required-features = ["nr"]

[[bench]]
name = "stack"
harness = false
path = "stack.rs"
required-features = ["nr"]

[[bench]]
name = "synthetic"
harness = false
path = "synthetic.rs"
required-features = ["nr"]

[[bench]]
name = "hashmap"
harness = false
path = "hashmap.rs"
required-features = ["nr"]

[[bench]]
name = "vspace"
harness = false
path = "vspace.rs"
required-features = ["nr"]

[[bench]]
name = "memfs"
harness = false
path = "memfs.rs"
required-features = ["nr"]

[profile.bench]
debug = true

[dependencies]
log = "0.4"
hwloc2 = "2.2"
env_logger = "0.9"
num_cpus = "1.12"
x86 = "0.42.0"
btfs = "0.0.4"
zipf = "7.0"
evmap = "8"
chashmap = "2.2"
urcu-sys = "=0.0.5"
csv = "1.1.3"
flurry = "0.3.0"
core_affinity = "0.5.10"
parking_lot = "0.11.1"
serde = { version = "1", features = ["derive"] }
clap = { version = "2", features = ["yaml"] }
rand = { version = "0.8", features = ["small_rng"] }
dashmap = "4.0.2"
lazy_static = "1.4"
crossbeam = { git = "https://github.com/crossbeam-rs/crossbeam" }
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
nrfs = { git = "https://github.com/ankit-iitb/nrfs" }
rand_xorshift = "0.3.0"
crossbeam-utils = { version = "0.8", default-features = false }
arr_macro = "0.1.2"
static_assertions = "1.1.0"
node-replication = { path = "../nr" }
cnr = { path = "../cnr" }

[features]
smokebench = []
cmp = []
# Very exhaustive parameter sweep (may take a day to run on a big machine)
exhaustive = []
nr = []
c_nr = []
