[package]
authors = [
  "Chinmay Kulkarni <chinmayk@cs.utah.edu>",
  "Gerd Zellweger <mail@gerdzellweger.com>",
  "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>",
  "Irina Calciu <icalciu@vmware.com>",
]
autobenches = false
categories = ["algorithms", "concurrency", "data-structures", "no-std", "os"]
description = "An operation-log based approach that transform single-threaded data structures into concurrent, replicated structures."
edition = "2018"
keywords = ["numa", "log", "x86", "black-box", "replication"]
license = "MIT OR Apache-2.0"
name = "node-replication"
readme = "README.md"
version = "0.2.0"

[dependencies]
arrayvec = "0.7.2"
crossbeam-utils = {version = "0.8.5", default-features = false}
# renamed to avoid confusion with our own `log` modules:
logging = { version = "0.4", package = "log" }
static_assertions = "1.1.0"

[target.'cfg(loom)'.dependencies]
arr_macro = "0.1.3"
loom = "0.5.6"

[dev-dependencies]
env_logger = "0.9.0"
rand = { version = "0.8", features = ["small_rng"] }
crossbeam-queue = "0.3.1"
# Benchmark crates:
zipf = "7.0"
bench_utils = { path = "../bench_utils" }
chashmap = "2.2"
dashmap = "4.0.2"
evmap = "8"
flurry = "0.3.0"
parking_lot = "0.12"
urcu-sys = "=0.0.5"
x86 = "0.51.0"
clap = { version = "2", features = ["yaml"] }
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam" }
nrfs = { git = "https://github.com/ankit-iitb/nrfs.git", branch = "master" }

[target.'cfg(not(loom))'.dev-dependencies]
# Config based dependency due to https://github.com/tokio-rs/tokio/issues/2463
tokio = { version = "1.11.0", features = ["rt", "macros"] }
futures =  { version = "0.3.17" }

# Add debug symbols on the release build so that we can debug performance issues
[profile.release]
debug = true

[features]
default = ["async"]
async = []

# Benchmark features (not intended for public use, no impact on library code)
# Compare with alternate data-structures:
cmp = []
# Make benchmark finish quickly to check if things work:
smokebench = ["bench_utils/smokebench"]
# Very exhaustive parameter sweep (takes a day to run on 4 sockets/192 threads):
exhaustive = []

[[bench]]
name = "hashmap"
harness = false

[[bench]]
name = "log"
harness = false

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "synthetic"
harness = false

[[bench]]
name = "vspace"
harness = false

[[bench]]
name = "hashbench"
harness = false

[[bench]]
name = "rwlockbench"
harness = false

[[bench]]
name = "lockfree"
harness = false

[[bench]]
name = "nrfs"
harness = false

[[bench]]
name = "chashbench"
harness = false