[package]
authors = [
  "Chinmay Kulkarni <chinmayk@cs.utah.edu>",
  "Gerd Zellweger <mail@gerdzellweger.com>",
  "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>",
  "Irina Calciu <icalciu@vmware.com>",
]
autobenches = false
categories = ["algorithms", "concurrency", "data-structures", "no-std", "os"]
description = "An operation-log based approach that transform single-threaded data structures into concurrent, replicated structures."
edition = "2018"
keywords = ["numa", "log", "x86", "black-box", "replication"]
license = "MIT OR Apache-2.0"
name = "node-replication"
readme = "README.md"
version = "0.1.0"

[dependencies]
crossbeam-utils = {version = "0.8.5", default-features = false}
log = "0.4"
static_assertions = "1.1.0"

# Add debug symbols on the release build so that we can debug performance issues
[profile.release]
debug = true

[dev-dependencies]
chashmap = "2.2"
rand = {version = "0.8", features = ["small_rng"]}

[features]
unstable = []
