[package]
authors = [
  "Chinmay Kulkarni <chinmayk@cs.utah.edu>",
  "Gerd Zellweger <mail@gerdzellweger.com>",
  "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>",
  "Irina Calciu <icalciu@vmware.com>",
]
autobenches = false
categories = ["algorithms", "concurrency", "data-structures", "no-std", "os"]
description = "An operation-log based approach that transform single-threaded data structures into concurrent, replicated structures."
edition = "2018"
keywords = ["numa", "log", "x86", "black-box", "replication"]
license = "MIT OR Apache-2.0"
name = "node-replication"
readme = "README.md"
version = "0.1.1"

[dependencies]
arrayvec = "0.7.2"
crossbeam-utils = {version = "0.8.5", default-features = false}
logging = { version = "0.4", package = "log" }
static_assertions = "1.1.0"

[target.'cfg(loom)'.dependencies]
arr_macro = "0.1.3"
loom = "0.5.6"

[target.'cfg(not(loom))'.dependencies]
# Config based dependency due to https://github.com/tokio-rs/tokio/issues/2463
tokio = { version = "1.11.0", features = ["rt", "macros"], optional = true }
futures =  { version = "0.3.17", optional = true }

# Add debug symbols on the release build so that we can debug performance issues
[profile.release]
debug = true

[dev-dependencies]
env_logger = "0.9.0"
rand = { version = "0.8", features = ["small_rng"] }
chashmap = "2.2"

[features]
default = ["unstable", "async"]
async = [ "tokio", "futures" ]
unstable = []
